# QChainDot_Node

./: Cargo.toml  CustomSpec.json  Dockerfile  README.md
client/: index.ts  package.json
crates/rpc/: Cargo.toml
crates/rpc/src/eth/: execute.rs  fee.rs  mod.rs  transaction.rs
crates/staking/: Cargo.toml
crates/staking/src/: address_mapping.rs  lib.rs
crates/staking/src/pallet/: impls.rs  mod.rs
examples/contract-erc20/: README.md
init_chain/: README.md  addMoney.ts  addNominator.ts  addValidator.ts  package-lock.json  package.json  prepare-test-net.sh  registerValidator.ts
node/: Cargo.toml  build.rs
node/src/: benchmarking.rs  chain_spec.rs  client.rs  command.rs  eth.rs  service.rs
node/src/rpc/: mod.rs
runtime/: Cargo.toml
runtime/src/: address.rs  const_evm_transaction.rs  constants.rs  lib.rs
ts-tests/: package-lock.json  package.json
ts-tests/contracts/: MyToken.sol
ts-tests/tests/: config.ts  test-const-fee-for-mult-contract.ts  test-const-fee-for-token-contract.ts  test-const-fee-for-token-transfer.ts  test-const-fee.ts
