[workspace]
members = [
	"node",
	"runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
bn = { package = "substrate-bn", version = "0.6", default-features = false }
environmental = { version = "1.1.3", default-features = false }
ethereum = { version = "0.14.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.37.0", default-features = false }
jsonrpsee = "0.16.2"
kvdb-rocksdb = "0.17.0"
libsecp256k1 = "0.7.1"
parity-db = "0.4.2"
rlp = { version = "0.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Substrate Client
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-client-db = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-consensus-manual-seal = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
# Substrate Primitive
sp-arithmetic = { version = "6.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-database = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-session = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-state-machine = { version = "0.13.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-storage = { version = "7.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-trie = { version = "7.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-version = { version = "5.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-staking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-application-crypto = { version = "7.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-npos-elections = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
sp-tracing = { version = "6.0.0",  git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
substrate-test-utils-derive = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
substrate-test-utils = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-staking = { path = "./crates/staking", default-features = false }

#pallet-staking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
# Substrate FRAME
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
frame-executive = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
frame-system-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-babe = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-sudo = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-offences= { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-session = { version = "4.0.0-dev",features = [ "historical" ], git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-utility = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-staking-reward-curve = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-collective = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-im-online = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-authority-discovery = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }


pallet-bags-list = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-treasury = {  version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-election-provider-multi-phase = {  version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
pallet-nomination-pools =  { version = "1.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
frame-election-provider-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375", default-features = false }
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
pallet-bounties = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
pallet-child-bounties = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sp-authority-discovery = { version = "4.0.0-dev",  default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-consensus-babe = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-consensus-epochs = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sp-keystore = { version = "0.13.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-chain-spec = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-consensus-slots = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sp-transaction-storage-proof = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-authority-discovery = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sp-core-hashing = { version = "5.0.0", default-features = false,  git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }

sc-consensus-babe-rpc = { version = "0.10.0-dev",default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-finality-grandpa-rpc = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-sync-state-rpc = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
substrate-state-trie-migration-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
sc-rpc-spec-v2 = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
mmr-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
# Substrate Utility

frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "1837f423b494254e1d27834b1c9da34b2c0c2375" }
# Frontier Client
fc-cli = { version = "1.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb" }
fc-consensus = { version = "2.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb" }
fc-db = { version = "2.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb" }
fc-mapping-sync = { version = "2.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb" }
fc-rpc = { path = "./crates/rpc" }
fc-rpc-core = { version = "1.1.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb" }
fc-storage = { version = "1.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb" }
# Frontier Primitive
fp-consensus = { version = "2.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
fp-dynamic-fee = { version = "1.0.0", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
fp-ethereum = { version = "1.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
fp-evm = { version = "3.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
fp-rpc = { version = "3.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
fp-self-contained = { version = "1.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
fp-storage = { version = "2.0.0", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
# Frontier FRAME
pallet-base-fee = { version = "1.0.0", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
pallet-dynamic-fee = { version = "4.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
pallet-ethereum = { version = "4.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
pallet-evm = { version = "6.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
pallet-evm-precompile-modexp = { version = "2.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
pallet-evm-precompile-simple = { version = "2.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
pallet-evm-test-vector-support = { version = "1.0.0-dev", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb" }
pallet-hotfix-sufficients = { version = "1.0.0", git = "ssh://git@bitbucket.org/qchainai/frontier.git", rev = "35a447ea3328530357e8f6c391d520727c7095bb", default-features = false }
# Frontier Template
qchain-template-runtime = { path = "runtime", default-features = false  }


