[package]
name = "pallet-staking"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-std  = { workspace = true }
sp-io  = { workspace = true }
sp-runtime  = { workspace = true }
sp-staking  = { workspace = true }
frame-support  = { workspace = true }
frame-system  = { workspace = true }
pallet-session = { workspace = true }
pallet-authorship  = { workspace = true }
sp-application-crypto  = { workspace = true }
frame-election-provider-support  = { workspace = true }
sp-core-hashing = { workspace = true }
log = "0.4.17"
pallet-ethereum = { workspace = true }
pallet-babe = { workspace = true }
# Optional imports for benchmarking
frame-benchmarking  = { workspace = true }
sp-core = { workspace = true }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "frame-election-provider-support/try-runtime"]
